--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -1,36 +1,19 @@
-kind: Service
-apiVersion: v1
-metadata:
-  name: train-schedule-service
-spec:
-  type: NodePort
-  selector:
-    app: train-schedule
-  ports:
-  - protocol: TCP
-    port: 30001
-    nodePort: 30001
-
----
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: train-schedule-deployment
-  labels:
-    app: train-schedule
+  name: my-app
 spec:
-  replicas: 2
   selector:
     matchLabels:
-      app: train-schedule
+      run: my-app
+  replicas: 1
   template:
     metadata:
       labels:
-        app: train-schedule
+        run: my-app
     spec:
       containers:
-      - name: train-schedule
-        image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
+      - name: my-app
+        image: yeasy/simple-web:latest
         ports:
-        - containerPort: 8080
+        - containerPort: 80
