--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: my-app
-        image: yeasy/simple-web:latest
+        image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
         ports:
         - containerPort: 80
